testsuite/tests/rename/T24452/T24452c.stderr
T24452c.hs:11:3: error: [GHC-54721]
    ‘empty’ is not a (visible) method of class ‘Alternative’