testsuite/tests/rename/T24452/T24452c.hs
-- Having Map.empty present, does not change the fact that Alternative.empty is not visible
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
module BugReproduce where

import Control.Applicative (Alternative)
import qualified Data.Map as Map

newtype Foo a = MkFoo [a] deriving (Functor, Applicative)

instance Alternative Foo where
  empty = undefined
